style.css
*{
	margin: 0;
	padding: 0;
	font-family: "popppins", sans-serif;
	box-sizing: border-box;
    font-weight: 500;
}

html {
    scroll-behavior: smooth;
}

:root{
    --primary-color: #fff;
    --secondary-color: #000;

}

.bg{
    background: #f6f6f6;
}

#profile{
    height: 200px;
    width: 200px;
    left: 20px;  
}

.container h1{
    font-size: 20px;
    font-weight: 300;
    text-align: center;
}

.header{
	height: 100vh;
	width: 100%;
	padding: 0 8%;
	background: #080008;
	position: relative;
}

nav{
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.nav-links{
	padding: 28px 0;
}

.nav-center{
    background-color: #E8E8E8;
    width: 100%;
    position: fixed;
    top: 0;
}

.nav-links li{
	display: inline-block;
	margin: 0 15px;
}

.nav-links li a{
	text-decoration: none;
	color: black;
	padding: 5px 0;
	position: relative;
}

.nav-links li a::after{
	content: '';
	background: #653f33;
	width: 0;
	height: 2px;
	position: absolute;
	bottom: 0;
	left: 0;
	transition: width 0.5s;
}

.nav-links li a:hover::after{
	width: 100%;
}

.center{
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.info{
	font-family: Arial, Helvetica, sans-serif;
	text-align: center;
    align-items: center;
    justify-content: center;
}

.about-me {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    /* margin-left: 450px;
    margin-right: 450px; */
    line-height: 180%;
}

.books {
    font-family: Arial, Helvetica, sans-serif;
    text-align: left;
    margin-left: 400px;
    margin-right: 200px;
    line-height: 180%;
}

.form{
	margin-left: 80px;
}

.form-group{
	width: 50%;
	margin-top: 20px;
	margin-left: 80px;
	font-size: 15px;
}
.form-group input,
.form-group textarea{
	width: 100%;
	padding: 5px;
	font-size: 18px; 
	border: 1px solid;
	margin-top: 5px;
	margin-left: 0px;
}

button[type="submit"]{
	width: 50%;
	margin-left: 80px;
	border: none;
	outline: none;
	padding: 20px;
	font-size: 15px;
	border-radius: 8px;
	font-family: 'Montserrat';
	text-align: center;
	cursor: pointer;
	margin-top: 10px;
	transition: .3s ease background-color;
}

button[type="submit"]:hover{
	background-color: rgb(214, 226, 236);
}

.projects{
	margin-left: 400px;
    align-items: center;
    line-height: 160%;
}

.blog-container{
	margin-left: 200px;
	margin-right: 300px;
	margin-top: 20px;
	line-height: 25px;
}

.slide-container{
	width: 800px;
	height: 600px;
	margin-left: auto;
	margin-right: auto;
	overflow: hidden;
	text-align: center;
}

.image-container{
	width: 2184px;
	height: 600px;
	position: relative;
	transition: left 2s;
	-webkit-transition: left 2s;
	-moz-transition: left 2s;
	-o-transition: left 2s;
}

.slider-image{
	max-width: 800px;
	max-height: 600px;
	float: left;
	margin: 0px;
	padding: 0px;
}

.button-container{
	top: -110px;
	color: black;
	position: relative;
}

.slider-button{
	display: inline-block;
	height: 10px;
	width: 10px;
	border-radius: 5px;
	background-color: white;
}

#slider-image-1:target ~ .image-container{
	left: 0px;
}
#slider-image-2:target ~ .image-container{
	left: -672px;
}
#slider-image-3:target ~ .image-container{
	left: -1600px;
}

.contact-info{
    text-align: center;
    align-items: center;
    justify-content: center;
}

.contact-link {
    transition: 1s ease;
}

.contact-link:hover{
    -webkit-transform: scale(0.85);
    -ms-transform: scale(0.85);
    transform: scale(0.85);
    transition: 1s ease;
}

.project-container {
    outline:#080008;
    outline: 0.01em solid black; float: left;
    height:620px;
    width:550px;
    margin-top: 50px;
    margin-bottom: 50px;
    margin-left: 50px;
    box-shadow: 10px 10px 5px darkgrey;
}

.project-container:hover {
    background-color: lightsteelblue;
    transition-delay: 0.04s;
}

